# graph-visualizer

./: .gitignore  README.md
src/: CMakeLists.txt  bmpHandler.cc  bmpHandler.cpp  graphHandler.cc  graphHandler.cpp  graphMath.cc  graphVisualizator.cc  main.cc  main.cpp
src/examples/: grid.txt  star.txt  sun.txt
src/h/: bmpHandler.h  graphHandler.h  graphMath.h  graphVisualizator.h
